Fix: Memory-efficient batch integration

--- a/Step0_fix_integration.ipynb
+++ b/Step0_fix_integration.ipynb
@@ -5,18 +5,17 @@
             "id": "header",
             "metadata": {},
             "source": [
-                "# 🔧 GSE182159 배치 파일 재통합\n",
+                "# 🔧 GSE182159 배치 파일 통합 (메모리 효율 버전)\n",
                 "\n",
-                "**목적**: 저장된 배치 파일들을 올바르게 통합하여 GSE182159_processed.h5ad 재생성\n",
+                "**문제**: 전체 배치를 한 번에 로드하면 RAM 부족\n",
                 "\n",
-                "| 배치 | 세포 수 |\n",
-                "|------|--------|\n",
-                "| batch_0 | 31,233 |\n",
-                "| batch_1 | 36,988 |\n",
-                "| batch_2 | 44,922 |\n",
-                "| batch_3 | 80,837 |\n",
-                "| batch_4 | 49,020 |\n",
-                "| **총합** | **243,000** |"
+                "**해결**: 2개씩 단계별 통합\n",
+                "\n",
+                "| 단계 | 작업 |\n",
+                "|------|------|\n",
+                "| 1 | batch_0 + batch_1 → merged_01 |\n",
+                "| 2 | batch_2 + batch_3 → merged_23 |\n",
+                "| 3 | merged_01 + merged_23 + batch_4 → final |"
             ]
         },
         {
@@ -30,35 +29,93 @@
                 "from google.colab import drive\n",
                 "drive.mount('/content/drive')\n",
                 "\n",
-                "!pip install anndata scanpy pandas -q\n",
+                "!pip install anndata pandas scipy -q\n",
                 "\n",
                 "import anndata as ad\n",
                 "import pandas as pd\n",
+                "import numpy as np\n",
+                "import scipy.sparse as sp\n",
                 "import os\n",
+                "import gc\n",
                 "\n",
                 "RAW_PATH = '/content/drive/MyDrive/tahoe-x1/viral_hepatitis/raw_data'\n",
-                "print(f'✅ 환경 설정 완료!')\n",
-                "print(f'📁 경로: {RAW_PATH}')"
+                "\n",
+                "# 배치 파일 확인\n",
+                "batch_files = sorted([f for f in os.listdir(RAW_PATH) if f.startswith('GSE182159_batch_')])\n",
+                "print(f'📦 배치 파일: {len(batch_files)}개')\n",
+                "for bf in batch_files:\n",
+                "    size_gb = os.path.getsize(f'{RAW_PATH}/{bf}') / 1e9\n",
+                "    print(f'   {bf}: {size_gb:.2f} GB')\n",
+                "\n",
+                "print('\\n✅ 환경 설정 완료!')"
             ]
         },
         {
             "cell_type": "code",
             "execution_count": null,
-            "id": "step2",
+            "id": "step2a",
             "metadata": {},
             "outputs": [],
             "source": [
-                "# @title STEP 2: 배치 파일 확인\n",
-                "batch_files = sorted([f for f in os.listdir(RAW_PATH) if f.startswith('GSE182159_batch_')])\n",
-                "print(f'📦 발견된 배치 파일: {len(batch_files)}개\\n')\n",
+                "# @title STEP 2a: batch_0 + batch_1 통합\n",
+                "print('📦 batch_0 + batch_1 통합 중...')\n",
                 "\n",
-                "total_cells = 0\n",
-                "for bf in batch_files:\n",
-                "    adata_temp = ad.read_h5ad(f'{RAW_PATH}/{bf}', backed='r')\n",
-                "    print(f'   {bf}: {adata_temp.n_obs:,} cells, {adata_temp.n_vars:,} genes')\n",
-                "    total_cells += adata_temp.n_obs\n",
+                "adata_0 = ad.read_h5ad(f'{RAW_PATH}/GSE182159_batch_0.h5ad')\n",
+                "print(f'   batch_0: {adata_0.n_obs:,} cells')\n",
                 "\n",
-                "print(f'\\n📊 총 세포 수: {total_cells:,}')"
+                "adata_1 = ad.read_h5ad(f'{RAW_PATH}/GSE182159_batch_1.h5ad')\n",
+                "print(f'   batch_1: {adata_1.n_obs:,} cells')\n",
+                "\n",
+                "# 통합\n",
+                "merged_01 = ad.concat([adata_0, adata_1], join='outer')\n",
+                "merged_01.var_names_make_unique()\n",
+                "\n",
+                "# sparse matrix로 변환 (메모리 절약)\n",
+                "if not sp.issparse(merged_01.X):\n",
+                "    merged_01.X = sp.csr_matrix(merged_01.X)\n",
+                "\n",
+                "# 저장\n",
+                "merged_01.write_h5ad(f'{RAW_PATH}/GSE182159_merged_01.h5ad')\n",
+                "print(f'\\n✅ merged_01 저장: {merged_01.n_obs:,} cells')\n",
+                "\n",
+                "# 메모리 정리\n",
+                "del adata_0, adata_1, merged_01\n",
+                "gc.collect()\n",
+                "print('🧹 메모리 정리 완료')"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "step2b",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# @title STEP 2b: batch_2 + batch_3 통합\n",
+                "print('📦 batch_2 + batch_3 통합 중...')\n",
+                "\n",
+                "adata_2 = ad.read_h5ad(f'{RAW_PATH}/GSE182159_batch_2.h5ad')\n",
+                "print(f'   batch_2: {adata_2.n_obs:,} cells')\n",
+                "\n",
+                "adata_3 = ad.read_h5ad(f'{RAW_PATH}/GSE182159_batch_3.h5ad')\n",
+                "print(f'   batch_3: {adata_3.n_obs:,} cells')\n",
+                "\n",
+                "# 통합\n",
+                "merged_23 = ad.concat([adata_2, adata_3], join='outer')\n",
+                "merged_23.var_names_make_unique()\n",
+                "\n",
+                "# sparse matrix로 변환\n",
+                "if not sp.issparse(merged_23.X):\n",
+                "    merged_23.X = sp.csr_matrix(merged_23.X)\n",
+                "\n",
+                "# 저장\n",
+                "merged_23.write_h5ad(f'{RAW_PATH}/GSE182159_merged_23.h5ad')\n",
+                "print(f'\\n✅ merged_23 저장: {merged_23.n_obs:,} cells')\n",
+                "\n",
+                "# 메모리 정리\n",
+                "del adata_2, adata_3, merged_23\n",
+                "gc.collect()\n",
+                "print('🧹 메모리 정리 완료')"
             ]
         },
         {
@@ -68,31 +125,48 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# @title STEP 3: 배치 파일 통합\n",
+                "# @title STEP 3: 최종 통합 (merged_01 + merged_23 + batch_4)\n",
+                "print('📦 최종 통합 중...')\n",
+                "print('   (런타임 재시작 후 이 셀부터 실행해도 됩니다)\\n')\n",
+                "\n",
+                "# 필요시 다시 import\n",
+                "import anndata as ad\n",
+                "import pandas as pd\n",
+                "import scipy.sparse as sp\n",
+                "import os\n",
                 "import gc\n",
                 "\n",
-                "print('🔗 배치 파일 통합 중...')\n",
-                "print('   (이 작업은 몇 분이 소요될 수 있습니다)\\n')\n",
+                "RAW_PATH = '/content/drive/MyDrive/tahoe-x1/viral_hepatitis/raw_data'\n",
                 "\n",
-                "adata_list = []\n",
-                "for i, bf in enumerate(batch_files):\n",
-                "    print(f'   Loading {bf}...')\n",
-                "    adata_batch = ad.read_h5ad(f'{RAW_PATH}/{bf}')\n",
-                "    adata_list.append(adata_batch)\n",
-                "    print(f'   ✅ {bf}: {adata_batch.n_obs:,} cells loaded')\n",
-                "    gc.collect()\n",
+                "# merged 파일들 로드\n",
+                "print('   Loading merged_01...')\n",
+                "merged_01 = ad.read_h5ad(f'{RAW_PATH}/GSE182159_merged_01.h5ad')\n",
+                "print(f'   ✅ merged_01: {merged_01.n_obs:,} cells')\n",
                 "\n",
-                "print(f'\\n🔗 Concatenating {len(adata_list)} batches...')\n",
-                "adata = ad.concat(adata_list, join='outer')\n",
+                "print('   Loading merged_23...')\n",
+                "merged_23 = ad.read_h5ad(f'{RAW_PATH}/GSE182159_merged_23.h5ad')\n",
+                "print(f'   ✅ merged_23: {merged_23.n_obs:,} cells')\n",
+                "\n",
+                "print('   Loading batch_4...')\n",
+                "batch_4 = ad.read_h5ad(f'{RAW_PATH}/GSE182159_batch_4.h5ad')\n",
+                "print(f'   ✅ batch_4: {batch_4.n_obs:,} cells')\n",
+                "\n",
+                "# 최종 통합\n",
+                "print('\\n🔗 최종 통합 중...')\n",
+                "adata = ad.concat([merged_01, merged_23, batch_4], join='outer')\n",
                 "adata.var_names_make_unique()\n",
                 "\n",
-                "print(f'\\n✅ 통합 완료!')\n",
+                "# sparse matrix 확인\n",
+                "if not sp.issparse(adata.X):\n",
+                "    adata.X = sp.csr_matrix(adata.X)\n",
+                "\n",
+                "print(f'\\n✅ 최종 통합 완료!')\n",
                 "print(f'   세포 수: {adata.n_obs:,}')\n",
                 "print(f'   유전자 수: {adata.n_vars:,}')\n",
                 "print(f'   샘플 수: {adata.obs[\"sample\"].nunique()}')\n",
                 "\n",
                 "# 메모리 정리\n",
-                "del adata_list\n",
+                "del merged_01, merged_23, batch_4\n",
                 "gc.collect()"
             ]
         },
@@ -103,36 +177,30 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# @title STEP 4: 메타데이터 매핑 (HBV 상태 추가)\n",
+                "# @title STEP 4: 메타데이터 매핑\n",
                 "metadata_file = f'{RAW_PATH}/sample_metadata.csv'\n",
                 "\n",
                 "if os.path.exists(metadata_file):\n",
                 "    print('📋 메타데이터 로드 중...')\n",
                 "    metadata_df = pd.read_csv(metadata_file)\n",
                 "    print(f'   샘플 수: {len(metadata_df)}')\n",
-                "    print(f'   컬럼: {metadata_df.columns.tolist()}')\n",
                 "    \n",
-                "    # GSM ID 추출 (샘플명에서)\n",
-                "    # sample 형식: GSM5519467_P190604_Blood_1\n",
+                "    # GSM ID 추출\n",
                 "    adata.obs['gsm_id'] = adata.obs['sample'].str.extract(r'(GSM\\d+)')[0]\n",
                 "    \n",
-                "    # 매핑 생성\n",
-                "    meta_dict = metadata_df.set_index('sample_id').to_dict()\n",
+                "    # 매핑\n",
+                "    meta_indexed = metadata_df.set_index('sample_id')\n",
+                "    for col in metadata_df.columns:\n",
+                "        if col != 'sample_id':\n",
+                "            adata.obs[col] = adata.obs['gsm_id'].map(meta_indexed[col].to_dict())\n",
                 "    \n",
-                "    # Stage 매핑 (HBV 상태)\n",
-                "    if 'Stage' in meta_dict:\n",
-                "        adata.obs['hbv_stage'] = adata.obs['gsm_id'].map(meta_dict['Stage'])\n",
-                "        print(f'\\n📊 HBV Stage 분포:')\n",
-                "        print(adata.obs['hbv_stage'].value_counts())\n",
-                "    \n",
-                "    # donor 매핑\n",
-                "    if 'donor' in meta_dict:\n",
-                "        adata.obs['donor'] = adata.obs['gsm_id'].map(meta_dict['donor'])\n",
-                "        print(f'\\n📊 Donor 수: {adata.obs[\"donor\"].nunique()}')\n",
+                "    print(f'\\n📊 HBV Stage 분포:')\n",
+                "    if 'Stage' in adata.obs.columns:\n",
+                "        print(adata.obs['Stage'].value_counts())\n",
                 "    \n",
                 "    print('\\n✅ 메타데이터 매핑 완료!')\n",
                 "else:\n",
-                "    print(f'⚠️ 메타데이터 파일이 없습니다: {metadata_file}')"
+                "    print('⚠️ 메타데이터 파일이 없습니다.')"
             ]
         },
         {
@@ -142,7 +210,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# @title STEP 5: 통합 파일 저장\n",
+                "# @title STEP 5: 최종 파일 저장\n",
                 "output_file = f'{RAW_PATH}/GSE182159_processed.h5ad'\n",
                 "\n",
                 "print(f'💾 저장 중: {output_file}')\n",
@@ -151,30 +219,40 @@
                 "adata.write_h5ad(output_file)\n",
                 "\n",
                 "print('=' * 60)\n",
-                "print('🎉 GSE182159 데이터 통합 및 저장 완료!')\n",
+                "print('🎉 GSE182159 데이터 통합 완료!')\n",
                 "print('=' * 60)\n",
                 "print(f'\\n📁 저장된 파일: {output_file}')\n",
                 "print(f'\\n📊 데이터 요약:')\n",
                 "print(f'   세포 수: {adata.n_obs:,}')\n",
                 "print(f'   유전자 수: {adata.n_vars:,}')\n",
                 "print(f'   샘플 수: {adata.obs[\"sample\"].nunique()}')\n",
-                "print(f'\\n📋 메타데이터 컬럼:')\n",
-                "print(f'   {list(adata.obs.columns)}')\n",
+                "print(f'\\n📋 obs 컬럼: {list(adata.obs.columns)}')\n",
                 "print('\\n✅ 다음 단계: Step1_HBV_real.ipynb 실행')"
             ]
         },
         {
             "cell_type": "code",
             "execution_count": null,
-            "id": "verify",
+            "id": "cleanup",
             "metadata": {},
             "outputs": [],
             "source": [
-                "# @title (선택) 저장된 파일 검증\n",
-                "print('🔍 저장된 파일 검증 중...')\n",
-                "adata_check = ad.read_h5ad(output_file, backed='r')\n",
-                "print(f'   Shape: {adata_check.shape}')\n",
-                "print(f'   ✅ 검증 완료! 세포 수: {adata_check.n_obs:,}')"
+                "# @title (선택) 중간 파일 정리\n",
+                "# 최종 파일 저장 확인 후 실행\n",
+                "\n",
+                "cleanup = False  # @param {type:\"boolean\"}\n",
+                "\n",
+                "if cleanup:\n",
+                "    import os\n",
+                "    merged_files = ['GSE182159_merged_01.h5ad', 'GSE182159_merged_23.h5ad']\n",
+                "    for mf in merged_files:\n",
+                "        path = f'{RAW_PATH}/{mf}'\n",
+                "        if os.path.exists(path):\n",
+                "            os.remove(path)\n",
+                "            print(f'🗑️ 삭제: {mf}')\n",
+                "    print('\\n✅ 중간 파일 정리 완료')\n",
+                "else:\n",
+                "    print('⏭️ 정리 건너뜀 (cleanup=True로 변경하여 실행)')"
             ]
         }
     ],
