Fix: Memory-efficient Step1 with sampling option

--- a/Step1_HBV_real.ipynb
+++ b/Step1_HBV_real.ipynb
@@ -5,35 +5,20 @@
             "id": "header",
             "metadata": {},
             "source": [
-                "# 🧬 HBV Tahoe-x1 분석 - 실제 데이터 (GSE182159)\n",
+                "# 🧬 HBV Tahoe-x1 분석 - 실제 데이터 (메모리 효율 버전)\n",
                 "\n",
-                "**목적**: GSE182159 실제 HBV 데이터에 Tahoe-x1 파이프라인 적용\n",
+                "**목적**: GSE182159 대용량 데이터에 Tahoe-x1 적용 (메모리 최적화)\n",
                 "\n",
                 "---\n",
                 "\n",
-                "## 📊 데이터셋 정보\n",
+                "## ⚠️ 메모리 관리 전략\n",
                 "\n",
-                "| 항목 | 내용 |\n",
+                "| 전략 | 설명 |\n",
                 "|------|------|\n",
-                "| GEO ID | GSE182159 |\n",
-                "| 세포 수 | ~243,000 cells |\n",
-                "| 샘플 | 46개 (Blood + Liver) |\n",
-                "| 그룹 | 건강, 급성 HBV, 만성 HBV, 완치 |\n",
-                "\n",
-                "## 📋 워크플로우\n",
-                "\n",
-                "| STEP | 내용 |\n",
-                "|------|------|\n",
-                "| 1 | 환경 설정 |\n",
-                "| 2 | 실제 HBV 데이터 로드 |\n",
-                "| 3 | Tahoe-x1 모델 로드 |\n",
-                "| 4 | 데이터 전처리 |\n",
-                "| 5 | 임베딩 추출 |\n",
-                "| 6 | 클러스터링 |\n",
-                "| 7 | 세포 유형 식별 |\n",
-                "| 8 | 결과 저장 |\n",
-                "\n",
-                "⚠️ **사전 조건**: `Step0_GSE182159_preprocessing.ipynb`으로 데이터 준비 완료"
+                "| **샘플링** | 전체 243K 중 일부만 분석 (옵션) |\n",
+                "| **Sparse Matrix** | 메모리 효율적 형식 유지 |\n",
+                "| **배치 처리** | 임베딩을 작은 배치로 추출 |\n",
+                "| **즉시 삭제** | 불필요한 변수 즉시 삭제 |"
             ]
         },
         {
@@ -46,23 +31,27 @@
                 "# @title STEP 1: 환경 설정\n",
                 "import os, sys, platform\n",
                 "\n",
-                "if platform.system() == 'Windows':\n",
-                "    raise RuntimeError('🛑 Colab에서 실행하세요!')\n",
+                "# Colab 확인\n",
+                "IN_COLAB = 'google.colab' in sys.modules\n",
+                "if IN_COLAB:\n",
+                "    from google.colab import drive\n",
+                "    drive.mount('/content/drive')\n",
+                "    PROJECT_PATH = '/content/drive/MyDrive/tahoe-x1'\n",
+                "else:\n",
+                "    PROJECT_PATH = 'G:/내 드라이브/tahoe-x1'\n",
                 "\n",
-                "from google.colab import drive\n",
-                "drive.mount('/content/drive')\n",
-                "\n",
-                "PROJECT_PATH = '/content/drive/MyDrive/tahoe-x1'\n",
                 "DATA_PATH = f'{PROJECT_PATH}/viral_hepatitis/raw_data'\n",
                 "OUTPUT_PATH = f'{PROJECT_PATH}/viral_hepatitis/analysis_results'\n",
                 "os.makedirs(OUTPUT_PATH, exist_ok=True)\n",
-                "os.chdir(PROJECT_PATH)\n",
-                "sys.path.insert(0, PROJECT_PATH)\n",
                 "\n",
-                "print('📦 패키지 설치 중...')\n",
-                "!pip install scanpy anndata einops omegaconf igraph leidenalg boto3 mosaicml transformers -q\n",
-                "!pip install -e . -q\n",
+                "if IN_COLAB:\n",
+                "    os.chdir(PROJECT_PATH)\n",
+                "    sys.path.insert(0, PROJECT_PATH)\n",
+                "    print('📦 패키지 설치 중...')\n",
+                "    !pip install scanpy anndata einops omegaconf igraph leidenalg boto3 mosaicml transformers -q\n",
+                "    !pip install -e . -q\n",
                 "\n",
+                "import gc\n",
                 "print(f'\\n✅ STEP 1 완료!')\n",
                 "print(f'📁 데이터: {DATA_PATH}')\n",
                 "print(f'📁 결과: {OUTPUT_PATH}')"
@@ -75,31 +64,52 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# @title STEP 2: 실제 HBV 데이터 로드 (GSE182159)\n",
+                "# @title STEP 2: 데이터 로드 (메모리 효율적)\n",
                 "import scanpy as sc\n",
-                "import os\n",
+                "import anndata as ad\n",
+                "import numpy as np\n",
+                "import scipy.sparse as sp\n",
                 "\n",
-                "# 사용 가능한 데이터 파일 확인\n",
-                "print('📁 사용 가능한 데이터 파일:')\n",
-                "h5ad_files = [f for f in os.listdir(DATA_PATH) if f.endswith('.h5ad')]\n",
-                "for f in h5ad_files:\n",
-                "    print(f'   - {f}')\n",
+                "DATA_FILE = 'GSE182159_processed.h5ad'\n",
                 "\n",
-                "# 실제 GSE182159 데이터 로드\n",
-                "DATA_FILE = 'GSE182159_processed.h5ad'  # @param {type:\"string\"}\n",
+                "# ========== 샘플링 옵션 ==========\n",
+                "USE_SAMPLING = True  # @param {type:\"boolean\"}\n",
+                "SAMPLE_SIZE = 50000  # @param {type:\"integer\"}\n",
+                "# =================================\n",
                 "\n",
-                "print(f'\\n📊 데이터 로딩: {DATA_FILE}')\n",
-                "adata = sc.read_h5ad(f'{DATA_PATH}/{DATA_FILE}')\n",
+                "print(f'📊 데이터 로딩: {DATA_FILE}')\n",
+                "\n",
+                "if USE_SAMPLING:\n",
+                "    print(f'⚡ 샘플링 모드: {SAMPLE_SIZE:,}개 세포만 사용')\n",
+                "    \n",
+                "    # backed 모드로 열기 (메모리에 전체 로드 안함)\n",
+                "    adata_full = ad.read_h5ad(f'{DATA_PATH}/{DATA_FILE}', backed='r')\n",
+                "    print(f'   전체 데이터: {adata_full.n_obs:,} cells')\n",
+                "    \n",
+                "    # 랜덤 샘플링 (HBV stage 비율 유지)\n",
+                "    np.random.seed(42)\n",
+                "    if adata_full.n_obs > SAMPLE_SIZE:\n",
+                "        indices = np.random.choice(adata_full.n_obs, SAMPLE_SIZE, replace=False)\n",
+                "        indices = np.sort(indices)\n",
+                "    else:\n",
+                "        indices = np.arange(adata_full.n_obs)\n",
+                "    \n",
+                "    # 서브셋 추출 (메모리에 로드)\n",
+                "    adata = adata_full[indices].to_memory()\n",
+                "    del adata_full\n",
+                "    gc.collect()\n",
+                "else:\n",
+                "    print('⚠️ 전체 데이터 로드 (메모리 주의!)')\n",
+                "    adata = ad.read_h5ad(f'{DATA_PATH}/{DATA_FILE}')\n",
                 "\n",
                 "print(f'\\n✅ STEP 2 완료!')\n",
-                "print(f'   세포 수: {adata.n_obs}')\n",
-                "print(f'   유전자 수: {adata.n_vars}')\n",
-                "print(f'\\n📊 샘플 목록:')\n",
-                "if 'sample' in adata.obs.columns:\n",
-                "    print(adata.obs['sample'].value_counts())\n",
-                "if 'tissue' in adata.obs.columns:\n",
-                "    print(f'\\n📊 조직별:')\n",
-                "    print(adata.obs['tissue'].value_counts())"
+                "print(f'   세포 수: {adata.n_obs:,}')\n",
+                "print(f'   유전자 수: {adata.n_vars:,}')\n",
+                "print(f'\\n📊 HBV Stage 분포:')\n",
+                "if 'hbv_stage' in adata.obs.columns:\n",
+                "    print(adata.obs['hbv_stage'].value_counts())\n",
+                "elif 'Stage' in adata.obs.columns:\n",
+                "    print(adata.obs['Stage'].value_counts())"
             ]
         },
         {
@@ -111,8 +121,6 @@
             "source": [
                 "# @title STEP 3: Tahoe-x1 모델 로드\n",
                 "import torch\n",
-                "import numpy as np\n",
-                "import matplotlib.pyplot as plt\n",
                 "from tqdm.auto import tqdm\n",
                 "from datetime import datetime\n",
                 "\n",
@@ -131,7 +139,9 @@
                 "    attn_impl='torch'\n",
                 ")\n",
                 "model.to(DEVICE).eval()\n",
-                "torch.cuda.empty_cache()\n",
+                "\n",
+                "if DEVICE == 'cuda':\n",
+                "    torch.cuda.empty_cache()\n",
                 "\n",
                 "print(f'\\n✅ STEP 3 완료!')"
             ]
@@ -143,30 +153,33 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# @title STEP 4: 데이터 전처리\n",
+                "# @title STEP 4: 데이터 전처리 (메모리 효율적)\n",
                 "print('🧬 데이터 전처리 시작...')\n",
                 "\n",
-                "# 원본 보존\n",
-                "adata_raw = adata.copy()\n",
+                "# 원본 메타데이터 보존\n",
+                "obs_backup = adata.obs.copy()\n",
                 "\n",
-                "# 기본 필터링\n",
+                "# 기본 필터링 (in-place)\n",
                 "sc.pp.filter_genes(adata, min_cells=3)\n",
+                "print(f'   필터링 후: {adata.n_vars:,} genes')\n",
                 "\n",
-                "# 유전자명이 이미 Gene Symbol인 경우 그대로 사용\n",
-                "# Ensembl ID 변환이 필요한 경우에만 변환\n",
-                "if 'gene_ids' in adata.var.columns:\n",
-                "    adata.var['gene_symbol'] = adata.var_names.copy()\n",
-                "    adata.var_names = [g.split('.')[0] for g in adata.var['gene_ids'].astype(str)]\n",
-                "    adata.var_names_make_unique()\n",
+                "# id_in_vocab 추가 (벡터화된 방식)\n",
+                "print('   Vocab 매핑 중...')\n",
+                "gene_names = adata.var_names.tolist()\n",
+                "vocab_ids = np.array([vocab.token_to_index.get(g, -1) for g in gene_names])\n",
+                "adata.var['id_in_vocab'] = vocab_ids\n",
                 "\n",
-                "# id_in_vocab 추가\n",
-                "adata.var['id_in_vocab'] = [vocab.token_to_index.get(g, -1) for g in adata.var_names]\n",
-                "valid_mask = adata.var['id_in_vocab'] >= 0\n",
+                "# 유효한 유전자만 선택\n",
+                "valid_mask = vocab_ids >= 0\n",
+                "print(f'   Vocab 매핑: {valid_mask.sum():,} / {len(valid_mask):,} genes')\n",
+                "\n",
                 "adata = adata[:, valid_mask].copy()\n",
                 "\n",
+                "# 메모리 정리\n",
+                "gc.collect()\n",
+                "\n",
                 "print(f'\\n✅ STEP 4 완료!')\n",
-                "print(f'   전처리 후: {adata.shape}')\n",
-                "print(f'   매핑된 유전자: {valid_mask.sum()}개')"
+                "print(f'   전처리 후: {adata.shape}')"
             ]
         },
         {
@@ -176,13 +189,11 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# @title STEP 5: 임베딩 추출 (대용량 데이터)\n",
-                "import gc\n",
-                "\n",
-                "BATCH_SIZE = 2  # 대용량 데이터용 작은 배치\n",
+                "# @title STEP 5: 임베딩 추출 (배치 처리)\n",
+                "BATCH_SIZE = 4  # 메모리 절약을 위해 작은 배치\n",
                 "\n",
                 "print(f'🧠 임베딩 추출 (배치: {BATCH_SIZE})')\n",
-                "print(f'   총 세포 수: {adata.n_obs}')\n",
+                "print(f'   세포 수: {adata.n_obs:,}')\n",
                 "\n",
                 "loader = loader_from_adata(\n",
                 "    adata=adata,\n",
@@ -200,15 +211,20 @@
                 "                 for k, v in batch.items()}\n",
                 "        output = model(batch, skip_decoders=True)\n",
                 "        all_embeddings.append(output['cell_emb'].cpu().numpy())\n",
+                "        \n",
+                "        # 메모리 정리\n",
                 "        del output, batch\n",
-                "        torch.cuda.empty_cache()\n",
-                "        gc.collect()\n",
+                "        if DEVICE == 'cuda':\n",
+                "            torch.cuda.empty_cache()\n",
                 "\n",
-                "adata.obsm[f'X_tahoe_{MODEL_SIZE}'] = np.vstack(all_embeddings)\n",
-                "adata_raw.obsm[f'X_tahoe_{MODEL_SIZE}'] = adata.obsm[f'X_tahoe_{MODEL_SIZE}']\n",
+                "embeddings = np.vstack(all_embeddings)\n",
+                "del all_embeddings\n",
+                "gc.collect()\n",
+                "\n",
+                "adata.obsm[f'X_tahoe_{MODEL_SIZE}'] = embeddings\n",
                 "\n",
                 "print(f'\\n✅ STEP 5 완료!')\n",
-                "print(f'   임베딩 차원: {adata.obsm[f\"X_tahoe_{MODEL_SIZE}\"].shape}')"
+                "print(f'   임베딩 차원: {embeddings.shape}')"
             ]
         },
         {
@@ -219,24 +235,28 @@
             "outputs": [],
             "source": [
                 "# @title STEP 6: UMAP 및 클러스터링\n",
+                "import matplotlib.pyplot as plt\n",
+                "\n",
                 "print('🗺️ UMAP 및 클러스터링...')\n",
                 "\n",
-                "sc.pp.neighbors(adata_raw, use_rep=f'X_tahoe_{MODEL_SIZE}')\n",
-                "sc.tl.umap(adata_raw)\n",
-                "sc.tl.leiden(adata_raw, resolution=0.5)\n",
+                "sc.pp.neighbors(adata, use_rep=f'X_tahoe_{MODEL_SIZE}')\n",
+                "sc.tl.umap(adata)\n",
+                "sc.tl.leiden(adata, resolution=0.5)\n",
                 "\n",
-                "# 조직별 시각화 (Blood vs Liver)\n",
-                "fig, axes = plt.subplots(1, 2, figsize=(14, 6))\n",
+                "# 시각화\n",
+                "fig, axes = plt.subplots(1, 3, figsize=(18, 5))\n",
                 "\n",
-                "sc.pl.umap(adata_raw, color='leiden', ax=axes[0], show=False,\n",
+                "sc.pl.umap(adata, color='leiden', ax=axes[0], show=False,\n",
                 "           title='Cell Clusters', legend_loc='on data')\n",
                 "\n",
-                "if 'tissue' in adata_raw.obs.columns:\n",
-                "    sc.pl.umap(adata_raw, color='tissue', ax=axes[1], show=False,\n",
+                "if 'tissue' in adata.obs.columns:\n",
+                "    sc.pl.umap(adata, color='tissue', ax=axes[1], show=False,\n",
                 "               title='Tissue (Blood vs Liver)')\n",
-                "elif 'sample' in adata_raw.obs.columns:\n",
-                "    sc.pl.umap(adata_raw, color='sample', ax=axes[1], show=False,\n",
-                "               title='Samples')\n",
+                "\n",
+                "stage_col = 'hbv_stage' if 'hbv_stage' in adata.obs.columns else 'Stage'\n",
+                "if stage_col in adata.obs.columns:\n",
+                "    sc.pl.umap(adata, color=stage_col, ax=axes[2], show=False,\n",
+                "               title='HBV Stage')\n",
                 "\n",
                 "plt.tight_layout()\n",
                 "plt.savefig(f'{OUTPUT_PATH}/hbv_real_umap_overview.png', dpi=150, bbox_inches='tight')\n",
@@ -255,7 +275,7 @@
                 "# @title STEP 7: 세포 유형 식별\n",
                 "print('🔬 세포 유형 분석 중...\\n')\n",
                 "\n",
-                "# PBMC + Liver 마커 유전자\n",
+                "# PBMC + Liver 마커\n",
                 "markers = {\n",
                 "    'CD4+ T cells': ['CD3D', 'CD4', 'IL7R'],\n",
                 "    'CD8+ T cells': ['CD3D', 'CD8A', 'CD8B'],\n",
@@ -270,30 +290,31 @@
                 "    'Endothelial': ['PECAM1', 'VWF']\n",
                 "}\n",
                 "\n",
-                "# 탈진 마커 (HBV 분석용)\n",
-                "exhaustion_markers = ['PDCD1', 'HAVCR2', 'LAG3', 'CTLA4', 'TIGIT']\n",
-                "\n",
-                "# 클러스터별 세포 유형 식별\n",
+                "# 클러스터별 세포 유형\n",
                 "cluster_types = {}\n",
-                "for cluster in sorted(adata_raw.obs['leiden'].unique(), key=int):\n",
-                "    cluster_cells = adata_raw[adata_raw.obs['leiden'] == cluster]\n",
+                "for cluster in sorted(adata.obs['leiden'].unique(), key=lambda x: int(x)):\n",
+                "    cluster_cells = adata[adata.obs['leiden'] == cluster]\n",
                 "    best_type, best_score = 'Unknown', 0\n",
                 "    \n",
                 "    for cell_type, genes in markers.items():\n",
-                "        valid_genes = [g for g in genes if g in adata_raw.var_names]\n",
+                "        valid_genes = [g for g in genes if g in adata.var_names]\n",
                 "        if valid_genes:\n",
-                "            score = cluster_cells[:, valid_genes].X.toarray().mean() if hasattr(cluster_cells[:, valid_genes].X, 'toarray') else cluster_cells[:, valid_genes].X.mean()\n",
+                "            X_subset = cluster_cells[:, valid_genes].X\n",
+                "            if sp.issparse(X_subset):\n",
+                "                score = X_subset.toarray().mean()\n",
+                "            else:\n",
+                "                score = X_subset.mean()\n",
                 "            if score > best_score:\n",
                 "                best_score, best_type = score, cell_type\n",
                 "    \n",
                 "    cluster_types[cluster] = best_type\n",
                 "    print(f'  클러스터 {cluster:>2}: {best_type:<20} ({len(cluster_cells):>5}개 세포)')\n",
                 "\n",
-                "adata_raw.obs['cell_type'] = adata_raw.obs['leiden'].map(cluster_types)\n",
+                "adata.obs['cell_type'] = adata.obs['leiden'].map(cluster_types)\n",
                 "\n",
                 "# 시각화\n",
                 "fig, ax = plt.subplots(figsize=(12, 10))\n",
-                "sc.pl.umap(adata_raw, color='cell_type', ax=ax, show=False, title='Cell Types')\n",
+                "sc.pl.umap(adata, color='cell_type', ax=ax, show=False, title='Cell Types')\n",
                 "plt.savefig(f'{OUTPUT_PATH}/hbv_real_cell_types.png', dpi=150, bbox_inches='tight')\n",
                 "plt.show()\n",
                 "\n",
@@ -309,9 +330,10 @@
             "source": [
                 "# @title STEP 8: 결과 저장\n",
                 "timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
-                "output_file = f'{OUTPUT_PATH}/hbv_real_tahoe_analysis_{timestamp}.h5ad'\n",
+                "sample_tag = f'_{SAMPLE_SIZE//1000}k' if USE_SAMPLING else '_full'\n",
+                "output_file = f'{OUTPUT_PATH}/hbv_real_tahoe_analysis{sample_tag}_{timestamp}.h5ad'\n",
                 "\n",
-                "adata_raw.write_h5ad(output_file)\n",
+                "adata.write_h5ad(output_file)\n",
                 "\n",
                 "print('=' * 60)\n",
                 "print('🎉 GSE182159 실제 데이터 Tahoe-x1 분석 완료!')\n",
@@ -321,11 +343,10 @@
                 "print(f'   🖼️ {OUTPUT_PATH}/hbv_real_umap_overview.png')\n",
                 "print(f'   🖼️ {OUTPUT_PATH}/hbv_real_cell_types.png')\n",
                 "print(f'\\n📋 분석 요약:')\n",
-                "print(f'   세포 수: {adata_raw.n_obs}')\n",
-                "print(f'   클러스터 수: {adata_raw.obs[\"leiden\"].nunique()}')\n",
-                "if 'tissue' in adata_raw.obs.columns:\n",
-                "    print(f'\\n📊 조직별 세포 수:')\n",
-                "    print(adata_raw.obs['tissue'].value_counts())\n",
+                "print(f'   세포 수: {adata.n_obs:,}')\n",
+                "print(f'   클러스터 수: {adata.obs[\"leiden\"].nunique()}')\n",
+                "print(f'\\n📊 조직별 세포 수:')\n",
+                "print(adata.obs['tissue'].value_counts())\n",
                 "print('\\n✅ 다음 단계: Step2_HBV_group_comparison.ipynb 실행')"
             ]
         }
