Update: Gene Symbol to Ensembl ID conversion for cell type analysis

--- a/Step0_fix_integration.ipynb
+++ b/Step0_fix_integration.ipynb
@@ -2,9 +2,10 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "4be934c7",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/choccoba/hbv-tahoe-analysis/blob/main/Step0_fix_integration.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -44,8 +45,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/drive\n",
             "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m174.2/174.2 kB\u001b[0m \u001b[31m5.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
@@ -87,8 +88,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "📦 발견된 배치 파일: 5개\n",
             "\n",
@@ -129,8 +130,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "🔗 배치 파일 통합 중...\n",
             "   (이 작업은 몇 분이 소요될 수 있습니다)\n",
@@ -155,14 +156,14 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "0"
             ]
           },
+          "execution_count": 3,
           "metadata": {},
-          "execution_count": 3
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -207,8 +208,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "📋 메타데이터 로드 중...\n",
             "   샘플 수: 46\n",
@@ -275,8 +276,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "💾 저장 중: /content/drive/MyDrive/tahoe-x1/viral_hepatitis/raw_data/GSE182159_processed.h5ad\n",
             "   (이 작업은 몇 분이 소요될 수 있습니다)\n",
@@ -334,8 +335,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "🔍 저장된 파일 검증 중...\n",
             "   Shape: (243000, 24452)\n",
@@ -356,9 +357,9 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": [],
+      "include_colab_link": true,
       "machine_shape": "hm",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
